--- a/vignettes/phenology_modelling_try.Rmd
+++ b/vignettes/phenology_modelling_try.Rmd
@@ -14,10 +14,10 @@ This excercise builds upon the model presented in "https://geco-bern.github.io/h
 --> 1+3 one is chosen to implement
 
 ```{r}
-packages <- c("phenocamr","dplyr","ggplot2","lubridate","daymetr","leaflet","terra","MODISTools")
+packages <- c("phenocamr","dplyr","ggplot2","lubridate","daymetr","leaflet","terra","MODISTools") 
 
 source("../R/load_packages.R")
-load_packages(packages)
+load_packages(packages)#loading packages
 
 phenocamr::download_phenocam(
   site = "harvard$",
@@ -27,12 +27,12 @@ phenocamr::download_phenocam(
   phenophase = TRUE,
   trim = 2022,
   out_dir = tempdir()
-)
+) #Downloading phenocam data
 
 harvard_phenocam_data <- readr::read_csv(
   file.path(tempdir(), "harvard_DB_1000_3day.csv"),
   comment = "#"
-)
+) #phenocam data read in
 
 # reading in harvard phenology only retaining
 # spring (rising) phenology for the GCC 90th
@@ -49,7 +49,7 @@ harvard_phenology <- readr::read_csv(
     gcc_value == "gcc_90"
   )
 
-#Now we also load data from the bartlettir site.
+#Now we also load data from the bartlettir site. same as for harvard
 phenocamr::download_phenocam(
   site = "bartlettir$",
   veg_type = "DB",
@@ -79,10 +79,10 @@ bartel_phenology <- readr::read_csv(
   )
 
 ```
-Now also respect solar radiation
+
 
 ```{r}
-
+#harvard temp and also radiation since used to improve model
 harvard_temp <- harvard_phenocam_data |>
   group_by(year) |>
   dplyr::mutate(
@@ -126,6 +126,7 @@ all_temp <- rbind(bartel_temp,harvard_temp) #then we combine the dataset
 ```
 Now we process the phenology data
 ```{r}
+#for Harvard
 harvard_phenology <- harvard_phenology |>
   mutate(
     doy = as.numeric(format(as.Date(transition_25),"%j")),
@@ -138,7 +139,7 @@ harvard_phenology <- harvard_phenology |>
     threshold_25
   )|>
     mutate(site = "Harvard")
-
+#same for bartel
 bartel_phenology <- bartel_phenology |>
   mutate(
     doy = as.numeric(format(as.Date(transition_25),"%j")),
@@ -166,19 +167,18 @@ gdd_model <- function(data_met, par) {
   gdd_crit <- par[2]
   solar_impact <- par[3]
 
-  # accumulate growing degree days for
-  # temperature data
+  #taking apart the meteodata fed to the model
   temp <- data_met[seq(from = 1, to = length(data_met)/2,by = 1)]
   sol <- data_met[seq(from = length(data_met)/2+1, to = length(data_met),by = 1)]
 
 
-
+  #using temp for growing degree days
   gdd <- cumsum(ifelse(temp > temp_threshold, temp - temp_threshold, 0))
   gdd <- gdd + (sol-mean(sol))/sd(sol)*solar_impact #A z standardized impact of the precipitation on gdd...
 
 
 
-  doy <- unlist(which(gdd >= gdd_crit)[1])
+  doy <- unlist(which(gdd >= gdd_crit)[1]) #doy
 
   return(doy)
 }
@@ -200,10 +200,12 @@ rmse_gdd <- function(par, data) {
     group_by(year,site) |> #now also sites
     summarise(
       predictions = gdd_model(
-        data_met = c(tmean,srad..W.m.2.),
+        data_met = c(tmean,srad..W.m.2.),#temp and solar rad
         par = par
-      )
-    )
+      ),
+      .groups = 'drop'
+    )|>
+    ungroup()
 
   predictions <- left_join(predictions, validation, by = c("year","site"))
 
@@ -254,7 +256,7 @@ optim_par = GenSA::GenSA(
 
 
 ```{r}
-
+#make predictions
 predictions <- all_temp |>
   group_by(year,site) |>
   summarize(
@@ -267,12 +269,12 @@ predictions <- all_temp |>
 
 # join predicted with observed data
 validation <- left_join(predictions, all_pheno)
-
+#plot with respect to sites
 ggplot2::ggplot(validation) +
   geom_smooth(
     aes(
       doy,
-      prediction
+      prediction,
     ),
     colour = "grey25",
     method = "lm"
@@ -280,7 +282,8 @@ ggplot2::ggplot(validation) +
   geom_point(
     aes(
       doy,
-      prediction
+      prediction,
+      col = site
     )
   ) +
   geom_abline(
@@ -292,10 +295,8 @@ ggplot2::ggplot(validation) +
     x = "Observed leaf-out date (DOY)",
     y = "Predicted leaf-out date (DOY)"
   ) +
-  theme_bw()  +
-  theme(
-    legend.position = "none"
-  )
+  theme_bw()
+
 
 ```
 
@@ -304,10 +305,10 @@ ggplot2::ggplot(validation) +
 ```{r}
 
 
-# Download daily data
+# Download daily data, this may take a wile, other data is used later
 # daymetr::download_daymet_tiles(
 #   tiles = 11935,
-#   start = 2012,
+#   start = 2008,
 #   end = 2012,
 #   param = c("tmin","tmax","srad"),
 #   path = paste0(here::here(), "/data-raw/"),
@@ -320,8 +321,9 @@ r <- daymetr::daymet_grid_tmean(
   product = 11935,
   year = 2012,
   internal = TRUE
-)
-r_2 <- terra::rast(paste0(here::here(), "/data-raw/","srad_2012_11935.nc"))
+)#temperature
+
+r_2 <- terra::rast(paste0(here::here(), "/data-raw/","srad_2012_11935.nc")) #radiation
 
 
 
@@ -338,7 +340,7 @@ ma_nh_temp <- terra::subset(
   1:180
 )
 
-# reproject to lat lon
+# reproject to lat lon also for rad
 r_2 <- terra::project(
   r_2,
   "+init=epsg:4326"
@@ -422,6 +424,160 @@ phenology <- MODISTools::mt_subset(
 
 phenology <- phenology |>
   mutate(
+    value = as.numeric(format(as.Date("1970-01-01") + value, "%j")),#mutate dates...
+    value = ifelse (value < 200, value, NA)) #data quality control
+#now raster
+phenology_raster <- MODISTools::mt_to_terra(
+  phenology,
+  reproject = TRUE
+)
+
+#now processing: cropping to each others extend...
+predicted_phenology <- terra::crop(
+  x = predicted_phenology,
+  y = phenology_raster
+)
+
+phenology_raster <- terra::crop(
+  x = phenology_raster,
+  y = predicted_phenology
+)
+
+#and adjusting resolution
+phenology_raster <- terra::resample(
+  x = phenology_raster,
+  y = predicted_phenology,
+  method = "average"
+)
+
+predicted_phenology <- terra::mask(
+  predicted_phenology,
+  is.na(phenology_raster),
+  maskvalues = TRUE
+)
+
+ ggplot() +
+  tidyterra::geom_spatraster(data = phenology_raster) +
+  scale_fill_viridis_c(
+    na.value = NA,
+    name = "DOY"
+    ) +
+  theme_bw()
+ 
+  ggplot() +
+  tidyterra::geom_spatraster(data = predicted_phenology) +
+  scale_fill_viridis_c(
+    na.value = NA,
+    name = "DOY"
+    ) +
+  theme_bw()
+ 
+#resulting in these two maps:
+```
+  
+  
+```{r}
+  
+  #Now we compare for the year 2012
+  predicted_df <- as.vector(predicted_phenology)
+phenology_df <- as.vector(phenology_raster)
+sct_df <- data.frame(
+  doy_p = predicted_df,
+  doy_m = phenology_df
+  )
+
+ggplot(
+  data = sct_df,
+      aes(
+      doy_p,
+      doy_m
+    )
+  ) +
+  geom_point() +
+  scale_fill_viridis_c(trans="log10") +
+  geom_smooth(
+    method = "lm",
+    se = FALSE,
+    colour = "white",
+    lty = 2
+  ) +
+  labs(
+    x = "predicted maturity (DOY)",
+    y = "MODIS vegetation maturity (DOY)"
+  ) +
+  theme_bw()
+```
+Not looking very promising, lets generalize this to the years 2008-2012
+```{r}
+sct_df <- data.frame(
+  doy_p = NULL,
+  doy_m = NULL,
+  year = NULL
+  )
+for (temp_year in c(2008:2012)) {
+  print(temp_year)
+  print(str(sct_df))
+
+# calculate the daily mean values
+r <- daymetr::daymet_grid_tmean(
+  path = paste0(here::here(), "/data-raw/"),
+  product = 11935,
+  year = temp_year,
+  internal = TRUE
+)
+r_2 <- terra::rast(paste0(here::here(), "/data-raw/","srad_",temp_year,"_11935.nc"))
+
+
+
+# reproject to lat lon
+r <- terra::project(
+  r,
+  "+init=epsg:4326"
+)
+
+
+# subset to first 180 days
+ma_nh_temp <- terra::subset(
+  r,
+  1:180
+)
+
+# reproject to lat lon
+r_2 <- terra::project(
+  r_2,
+  "+init=epsg:4326"
+)
+
+
+# subset to first 180 days
+ma_nh_sol <- terra::subset(
+  r_2,
+  1:180
+)
+
+
+
+predicted_phenology <- terra::app(
+  c(ma_nh_temp,ma_nh_sol),
+  fun = gdd_model,
+  par = optim_par
+)
+# download and save phenology data
+phenology <- MODISTools::mt_subset(
+  product = "MCD12Q2",
+  lat = 43.152662,
+  lon =  -71.382337,
+  band = "Greenup.Num_Modes_01",
+  start = paste0(temp_year,"-01-01"),
+  end = paste0(temp_year,"-12-31"),
+  km_lr = 50,
+  km_ab = 50,
+  internal = TRUE,
+  progress = TRUE
+)
+
+phenology <- phenology |>
+  mutate(
     value = as.numeric(format(as.Date("1970-01-01") + value, "%j")),
     value = ifelse (value < 200, value, NA))
 
@@ -453,30 +609,30 @@ predicted_phenology <- terra::mask(
   is.na(phenology_raster),
   maskvalues = TRUE
 )
+print(str(data.frame(
+  doy_p = predicted_df,
+  doy_m = phenology_df,
+  year = temp_year
+  )))
 
- ggplot() +
-  tidyterra::geom_spatraster(data = phenology_raster) +
-  scale_fill_viridis_c(
-    na.value = NA,
-    name = "DOY"
-    ) +
-  theme_bw()
- 
-  ggplot() +
-  tidyterra::geom_spatraster(data = predicted_phenology) +
-  scale_fill_viridis_c(
-    na.value = NA,
-    name = "DOY"
-    ) +
-  theme_bw()
- 
+ predicted_df <- as.vector(predicted_phenology)
+phenology_df <- as.vector(phenology_raster)
+sct_df <- rbind(sct_df,data.frame(
+  doy_p = predicted_df,
+  doy_m = phenology_df,
+  year = temp_year
+  ))
 
-```
-  
-  
-```{r}
-  
-  
+}
+
+
+
+
+
+
+
+
+
   predicted_df <- as.vector(predicted_phenology)
 phenology_df <- as.vector(phenology_raster)
 sct_df <- data.frame(
@@ -488,7 +644,8 @@ ggplot(
   data = sct_df,
       aes(
       doy_p,
-      doy_m
+      doy_m,
+      col = year
     )
   ) +
   geom_point() +
@@ -505,5 +662,4 @@ ggplot(
   ) +
   theme_bw()
 ```
-
-
+Alright, looks much better...
