--- a/vignettes/phenology_modelling_try.Rmd
+++ b/vignettes/phenology_modelling_try.Rmd
@@ -11,10 +11,12 @@ This excercise builds upon the model presented in "https://geco-bern.github.io/h
 2) Add information about plant species
 3) Use more parameters for model
 
---> 1+3 one is chosen to implement
+This markdown implements adding more data and using an additional parameter.
+
+First, the same workflow for harvard is performed as in the turorial. This is also done for an additional site: Bartel.
 
 ```{r}
-packages <- c("phenocamr","dplyr","ggplot2","lubridate","daymetr","leaflet","terra","MODISTools") 
+packages <- c("phenocamr","dplyr","ggplot2","lubridate","daymetr","leaflet","terra","MODISTools","daymetr") 
 
 source("../R/load_packages.R")
 load_packages(packages)#loading packages
@@ -79,7 +81,7 @@ bartel_phenology <- readr::read_csv(
   )
 
 ```
-
+Then gdd, tmean and rad are extracted for each date and site. This is the same as in the tutorial just now also with radiation and for both sites. Afterwards we combine both dataframes.
 
 ```{r}
 #harvard temp and also radiation since used to improve model
@@ -124,7 +126,7 @@ bartel_temp <- bartel_phenocam_data |>
 all_temp <- rbind(bartel_temp,harvard_temp) #then we combine the dataset
 
 ```
-Now we process the phenology data
+Now we process the phenology data as in the tutorial but for both sites. Afterwards we combine both dataframes.
 ```{r}
 #for Harvard
 harvard_phenology <- harvard_phenology |>
@@ -158,6 +160,7 @@ all_pheno <- rbind(bartel_phenology,harvard_phenology) #again we combine
 
 ```
 
+Now, the function is also changed, so that the radiation also has an impact. The radiation is z standardized and then added to the value of gdd. To perform a spatial upscaling later, the two parameters need to be passed as a list. Other than that, the function corresponds to the one used in the exercise.
 
 ```{r}
 gdd_model <- function(data_met, par) {
@@ -184,6 +187,7 @@ gdd_model <- function(data_met, par) {
 }
 
 ```
+The rmse function is then the same as in the exercise. only now we also have the site id.
 
 ```{r}
 rmse_gdd <- function(par, data) {
@@ -220,6 +224,7 @@ rmse_gdd <- function(par, data) {
 }
 ```
 
+Now we tune the model. For. this parameters are set as following:
 
 ```{r}
 # starting model parameters
@@ -253,7 +258,7 @@ optim_par = GenSA::GenSA(
 
 ```
 
-
+Now we plot the 
 
 ```{r}
 #make predictions
@@ -268,9 +273,14 @@ predictions <- all_temp |>
 
 
 # join predicted with observed data
-validation <- left_join(predictions, all_pheno)
+validation <- left_join(predictions, all_pheno) |>tidyr::drop_na()
 #plot with respect to sites
-ggplot2::ggplot(validation) +
+# Calculate R-squared and RMSE
+rsq <- cor(validation$prediction, validation$doy)^2
+rmse <- sqrt(mean((validation$prediction - validation$doy)^2))
+
+# Create the plot
+ggplot(validation) +
   geom_smooth(
     aes(
       doy,
@@ -295,25 +305,37 @@ ggplot2::ggplot(validation) +
     x = "Observed leaf-out date (DOY)",
     y = "Predicted leaf-out date (DOY)"
   ) +
-  theme_bw()
+  theme_bw() +
+  annotate(
+    "text",
+    x = min(validation$doy) + 5,
+    y = max(validation$prediction) + 1,
+    label = paste0("R-squared = ", round(rsq, 3)),
+  ) +
+  annotate(
+    "text",
+    x = min(validation$doy) + 5,
+    y = max(validation$prediction) ,
+    label = paste0("RMSE = ", round(rmse, 3)),
+  )
 
 
 ```
 
-
+Now, we rast the daymet data for spatial upscaling and laster statistical comparison. We also perform a assignment of coordinate system we only look at the first 180 days. For both radiation and mean temperature. But for now just the year 2012.
 
 ```{r}
 
 
 # Download daily data, this may take a wile, other data is used later
-# daymetr::download_daymet_tiles(
-#   tiles = 11935,
-#   start = 2008,
-#   end = 2012,
-#   param = c("tmin","tmax","srad"),
-#   path = paste0(here::here(), "/data-raw/"),
-#   silent = TRUE
-#   )
+daymetr::download_daymet_tiles(
+  tiles = 11935,
+  start = 2008,
+  end = 2012,
+  param = c("tmin","tmax","srad"),
+  path = paste0(here::here(), "/data-raw/"),
+  silent = TRUE
+  )
 
 # calculate the daily mean values
 r <- daymetr::daymet_grid_tmean(
@@ -354,6 +376,8 @@ ma_nh_sol <- terra::subset(
 )
 ```
 
+Now we spatially upscale.
+
 ```{r}
 
 
@@ -366,7 +390,7 @@ predicted_phenology <- terra::app(
 
 ```
 
-
+First, a nico overview of the model predictions.
 
 ```{r}
 
@@ -404,6 +428,7 @@ leaflet() |>
 
 ```
 
+Now we visually compare the modis data to our model. We also need to crop the modis and our data to the same extend.
 ```{r}
 
 
@@ -474,7 +499,8 @@ predicted_phenology <- terra::mask(
  
 #resulting in these two maps:
 ```
-  
+ Interesting. We see almost no visible correlation. Lets check this:
+ We perform a correlation for each pixel of the map of the modis data to our predicted data.
   
 ```{r}
   
@@ -484,7 +510,8 @@ phenology_df <- as.vector(phenology_raster)
 sct_df <- data.frame(
   doy_p = predicted_df,
   doy_m = phenology_df
-  )
+  )|>
+  tidyr::drop_na()
 
 ggplot(
   data = sct_df,
@@ -498,16 +525,18 @@ ggplot(
   geom_smooth(
     method = "lm",
     se = FALSE,
-    colour = "white",
+    colour = "black",
     lty = 2
   ) +
   labs(
     x = "predicted maturity (DOY)",
     y = "MODIS vegetation maturity (DOY)"
   ) +
+  annotate("text",x = 110, y = 145, label = paste("R-squared:", round(cor(sct_df$doy_p,sct_df$doy_m)^2, 3))) +
+  annotate("text",x = 110, y = 150, label = paste("RMSE:", round(sqrt(mean((sct_df$doy_p - sct_df$doy_m)^2)), 3)))+
   theme_bw()
 ```
-Not looking very promising, lets generalize this to the years 2008-2012
+Not looking very promising, a very waek correlation if at all. Lets generalize this to the years 2008-2012
 ```{r}
 sct_df <- data.frame(
   doy_p = NULL,
@@ -627,18 +656,11 @@ sct_df <- rbind(sct_df,data.frame(
 
 
 
+sct_df <- sct_df |>
+  tidyr::drop_na()
 
 
 
-
-
-
-  predicted_df <- as.vector(predicted_phenology)
-phenology_df <- as.vector(phenology_raster)
-sct_df <- data.frame(
-  doy_p = predicted_df,
-  doy_m = phenology_df
-  )
 
 ggplot(
   data = sct_df,
@@ -660,6 +682,10 @@ ggplot(
     x = "predicted maturity (DOY)",
     y = "MODIS vegetation maturity (DOY)"
   ) +
+  annotate("text",x = 110, y = 145, label = paste("R-squared:", round(cor(sct_df$doy_p,sct_df$doy_m)^2, 3))) +
+  annotate("text",x = 110, y = 150, label = paste("RMSE:", round(sqrt(mean((sct_df$doy_p - sct_df$doy_m)^2)), 3)))+
   theme_bw()
+
+
 ```
-Alright, looks much better...
+Alright, looks much better. Still the RMSE remains very high. I expect that mainly the yearly signal correlates and the spatial still does not.
