--- a/vignettes/Spatial_Upscaling.Rmd
+++ b/vignettes/Spatial_Upscaling.Rmd
@@ -2,17 +2,64 @@
 title: "Spatial_Upscaling"
 author: "Nils Tinner"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  html_document:
+    toc: yes
+    toc_float: yes
+    number_sections: yes
+    latex_engine: xelatex
+    css: styles.css
+editor_options:
+  markdown:
+    wrap: 75
 ---
 
-# Notes to paper Ludwig et al. 2023
+# Structure
 
-Explain the difference between a random cross-validation and a spatial cross-validation... -\>In random cross validation the training dataset is split randomly. Therefore folds are just checking if the prediction task is applicable to the training-dataset at hand over the entire space spanned by the covariates. Whereas the spatial cross validation creates the folds based on assigned geographic space. The sites are grouped by geographic location (ex. blocks of 6 degree by 6 degree) and then the folds are created based on where the site lies. Then crossvalidation is performed. This aims at understanding if the model is able to predict locations that are not known and so span a unknown covariate space though this is only done for geographic space in this case. They also perform a feature cross alidation with all the covariates (I assume).
+This project implements the excercise Spatial Upscaling from the AGDS 2
+course of the GECO Bern group. First questions about the paper from Ludwig
+et al. 2023 will be discussed. Then the spatial upscaling exercise is done.
 
-In spatial upscaling, we model the target based on environmental covariates. This implies that we assume the training data to sufficiently represent the conditions on which the model will be applied for generating predictions. Prediction errors may increase with an increasing distance of the prediction location from the training locations. The paper by Ludwig et al. (2023) considers this "distance" as a geographical distance in Euclidian space. Do you see an alternative to measuring a distance that considers the task of spatial upscaling based on environmental covariates more directly? -\> Yes, maybe use similarity in covariates? so look at how much the covariates differ in the prediction sites and then make folds according to variance in covariates. These covariates should then be of environmental origin themselves. Then one can also check if prediction task lies outside of known covariates boundries. This then lets one check if model can be applied to all of map. This is done in the paper as well, also for the entire covariate space not just geographic, resulting in the area of applicability (AOA).
+## Notes to paper Ludwig et al. 2023
 
-## Setup
+**Explain the difference between a random cross-validation and a spatial
+cross-validation.**
+
+-\>In random cross validation the training dataset is split randomly.
+Therefore folds are just checking if the prediction task is applicable to
+the training-dataset at hand over the entire space spanned by the
+covariates. Whereas the spatial cross validation creates the folds based on
+assigned geographic space. The sites are grouped by geographic location
+(ex. blocks of 6 degree by 6 degree) and then the folds are created based
+on where the site lies. Then crossvalidation is performed. This aims at
+understanding if the model is able to predict locations that are not known
+and so span a unknown covariate space though this is only done for
+geographic space in this case. They also perform a feature cross alidation
+with all the covariates (I assume).
+
+**In spatial upscaling, we model the target based on environmental
+covariates. This implies that we assume the training data to sufficiently
+represent the conditions on which the model will be applied for generating
+predictions. Prediction errors may increase with an increasing distance of
+the prediction location from the training locations. The paper by Ludwig et
+al. (2023) considers this "distance" as a geographical distance in
+Euclidian space. Do you see an alternative to measuring a distance that
+considers the task of spatial upscaling based on environmental covariates
+more directly?**
+
+-\> Yes, maybe use similarity in covariates. So look at how much the
+covariates differ in the prediction sites and then make folds according to
+variance in covariates. These covariates should then be of environmental
+origin themselves. Then one can also check if prediction task lies outside
+of known covariates boundries. This then lets one check if model can be
+applied to all of map. This is done in the paper as well, also for the
+entire covariate space not just geographic, resulting in the area of
+applicability (AOA).
+
+# Setup
+
 Loading all the packages
+
 ```{R}
 packages <- c("tidyverse","recipes","ggplot2","sf","rnaturalearth","rnaturalearthdata","caret","ranger","skimr") 
 
@@ -22,8 +69,10 @@ load_packages(packages)#loading
 
 ```
 
-## Read-in and data processing as in excercise
+## Read-in and data processing as in the excercise
+
 No further specification
+
 ```{R}
 df <- readr::read_csv("https://raw.githubusercontent.com/stineb/leafnp_data/main/data/leafnp_tian_et_al.csv")
 
@@ -47,7 +96,10 @@ skimr::skim(dfs)
 ```
 
 ## Define simple model with random cross-validation
-Directly from AGDS 1, no hyperparameter tuning, cv random, 5 fold. Predictors as specified in exercise.
+
+Directly from AGDS 1 forest definition, no hyperparameter tuning is
+performed, cv is random with 5 folds. Predictors as specified in exercise.
+
 ```{R}
 pp <- recipes::recipe(leafN ~ elv + mat + map + ndep + mai + Species, 
                       data = dfs) |> 
@@ -77,7 +129,9 @@ print(paste0("RSQ : ", mean(mod_random_cv$resample$Rsquared)))
 
 ```
 
-## Spatial cross-validation
+# Spatial cross-validation
+
+First, we evaluate the distribution of the datasource.
 
 ```{R}
 
@@ -103,11 +157,20 @@ ggplot() +
 
 ```
 
-Task:: What do you observe? Discuss the potential implications of the geographical distribution of data points for spatial upscaling. -> Heavy clustering in Europe and SE-Asia. Almost no sites in America or Africa
+**Task:: What do you observe? Discuss the potential implications of the
+geographical distribution of data points for spatial upscaling.**
 
-### Spatial clusters
+-\> Heavy clustering in Europe and SE-Asia. Almost no sites in America or
+Africa: heavy bias towards these regions, spatial upscaling in other
+regions may not be justified.
 
-Task:: Perform a spatial cross-validation. To do so, first identify geographical clusters of the data using the k-means algorithm (an unsupervised machine learning method), considering the longitude and latitude of data points and setting . Plot points on a global map, showing the five clusters with distinct colors.
+## Spatial clusters
+
+**Task:: Perform a spatial cross-validation. To do so, first identify
+geographical clusters of the data using the k-means algorithm (an
+unsupervised machine learning method), considering the longitude and
+latitude of data points and setting . Plot points on a global map, showing
+the five clusters with distinct colors.**
 
 ```{R}
 
@@ -136,9 +199,11 @@ ggplot() +
   theme(legend.position = "bottom")
 
 ```
-we see spatially formed clusters. Interestingly western europe with all of the americas. Probably due to little data availability.
 
-Task:: Plot the distribution of leaf N by cluster.
+We see spatially formed clusters. Interestingly western Europe with all of
+the Americas. Probably due to little data availability in these regions.
+
+**Task:: Plot the distribution of leaf N by cluster.**
 
 ```{r}
 
@@ -165,11 +230,19 @@ combined_plots <- cowplot::plot_grid(boxplot, density_plot, ncol = 2, align = "v
 combined_plots
 
 ```
-We observe similar distributions of the mean with cluster 2 being very dense around the mean leaf nitrogen. But the density for some clusters is much more dense then for others. This might implies that some clusters are more similar in regards to leaf nitrogen than others.
 
-Task:: Split your data into five folds that correspond to the geographical clusters identified by in (2.), and fit a random forest model with the same hyperparameters as above and performing a 5-fold cross-validation with the clusters as folds. Report the RMSE and the R determined on each of the five folds
+We observe similar distributions of the mean with cluster 2 being very
+dense around the mean leaf nitrogen. But the density for some clusters is
+much more dense then for others. This might imply that some clusters are
+more similar in regards to leaf nitrogen than others.
 
-### Folds by cluster for spatial folds
+**Task:: Split your data into five folds that correspond to the geographical
+clusters identified by in (2.), and fit a random forest model with the same
+hyperparameters as above and performing a 5-fold cross-validation with the
+clusters as folds. Report the RMSE and the R determined on each of the five
+folds**
+
+## Folds by cluster for spatial folds
 
 ```{r}
 
@@ -199,7 +272,7 @@ group_folds_test <- purrr::map(
 )
 ```
 
-### Corss-validation by hand for spatial folds
+## Corss-validation by hand for spatial folds
 
 ```{r}
 # create a function that trains a random forest model on a given set of rows and 
@@ -254,10 +327,17 @@ print(paste0("RSQ: ",round(mean(out$rsq),2)))
 print(paste0("RMSE: ",round(mean(out$rmse),2)))
 
 ```
-## Enviromental Cross Validation
-Task:: To do so, perform a custom cross-validation as above, but this time considering five clusters of points not in geographical space, but in environmental space - spanned by the mean annual precipitation and the mean annual temperature. Report the R-squared and the RMSE on the validation set of each of the five folds.
 
-### Define the enviromental clusters.
+# Enviromental Cross Validation
+
+**Task:: To do so, perform a custom cross-validation as above, but this time
+considering five clusters of points not in geographical space, but in
+environmental space - spanned by the mean annual precipitation and the mean
+annual temperature. Report the R-squared and the RMSE on the validation set
+of each of the five folds.**
+
+## Define the enviromental clusters
+
 ```{r}
 
 env <- dfs |>
@@ -313,10 +393,16 @@ combined_plots <- cowplot::plot_grid(boxplot, density_plot, ncol = 2, align = "v
 # Display combined plots
 combined_plots
 ```
-We observe similar distributions for all clusters of leaf nitrogen for the environmental cross validation folds. But now, the density is more even for the clusters. This is probably because leaf nitrogen is now split more evenly across the folds because they are environmentally not spatially clustered.
 
-### Enviromental cross-validation by hand
+We observe similar distributions for all clusters of leaf nitrogen for the
+environmental cross validation folds. But now, the density is more even for
+the clusters. This is probably because leaf nitrogen is now split more
+evenly across the folds because they are environmentally not spatially
+clustered.
 
+Furthermore we see the nice clusters in the second plot.
+
+## Enviromental cross-validation by hand
 
 ```{r}
 
@@ -368,9 +454,27 @@ print(paste0("RMSE: ",round(mean(out$rmse),2)))
 
 ```
 
-## Comparison of results
+# Discussion of the results
 
-The best metrics of all model has the random cross validation model. This is to be expected since data from all sites are in all folds and thus no spatial or environmental validation is made. The model performance is though not representative for the spatial upscaling task. The RSQ and the RMSE is higher with the environmental cross validation. This probably means that the folds are more similar to each other and thus have a higher predictive power then when doing a spatial cross validation. This is also visible in the different folds. The folds in the spatial upscaling perform vastly different to each other while in the enviromental upscaling the folds are more similar. Additionally by far the lowest predictive power of any cluster has a fold in the spatial upscaling further backing this up.
+The best metrics of all model has the random cross validation model. This
+is to be expected since data from all sites are in all folds and thus no
+spatial or environmental validation is made. The model performance is
+though not representative for the spatial upscaling task. The RSQ and the
+RMSE is higher with the environmental cross validation. This probably means
+that the folds are more similar to each other and thus have a higher
+predictive power then when doing a spatial cross validation. This is also
+visible in the different folds. The folds in the spatial upscaling perform
+vastly different to each other while in the enviromental upscaling the
+folds are more similar. Additionally by far the lowest predictive power of
+any cluster has a fold in the spatial upscaling further backing this up.
 
-
-All in all the preferred solution should be a spatial or enviromental cross-validation since it is more sincere about the predictive power of the model in novel sites and therefore spatial upscaling. A good solution would be to check if the new enviromental covariates that are present in each fold have a similar distances as when performing a spatial upsacling. If true, this then further validates the model. If not, new training data should be optained or the spatial upsacling should only be performed to the areas with known enviromental covariates. This is because models perform poorly when exposed to data outside of the training values. (CITATION PAPER ABOVE) This is also done with the AOA in the paper.
+All in all the preferred solution should be a spatial or enviromental
+cross-validation since it is more sincere about the predictive power of the
+model in novel sites and therefore spatial upscaling. A good solution would
+be to check if the new enviromental covariates that are present in each
+fold have a similar distances as when performing a spatial upsacling. If
+true, this then further validates the model. If not, new training data
+should be optained or the spatial upsacling should only be performed to the
+areas with known enviromental covariates. This is because models perform
+poorly when exposed to data outside of the training values. (Ludwig et
+al.2023) This is also done with the AOA in the paper.
