--- a/vignettes/Spatial_Upscaling.Rmd
+++ b/vignettes/Spatial_Upscaling.Rmd
@@ -7,6 +7,7 @@ output:
     toc: yes
     toc_float: yes
     number_sections: yes
+    code_folding: "hide"
     latex_engine: xelatex
     css: styles.css
 editor_options:
@@ -16,9 +17,14 @@ editor_options:
 
 # Structure
 
-This project implements the excercise Spatial Upscaling from the AGDS 2
+This project implements the exercise spatial upscaling from the AGDS 2
 course of the GECO Bern group. First questions about the paper from Ludwig
 et al. 2023 will be discussed. Then the spatial upscaling exercise is done.
+This entails three cross validations for a spatial upscaling task:
+1) random
+2) spatial
+3) environmental
+Finally, they are all compared.
 
 ## Notes to paper Ludwig et al. 2023
 
@@ -26,15 +32,15 @@ et al. 2023 will be discussed. Then the spatial upscaling exercise is done.
 cross-validation.**
 
 -\>In random cross validation the training dataset is split randomly.
-Therefore folds are just checking if the prediction task is applicable to
-the training-dataset at hand over the entire space spanned by the
+Therefore folds are just checking if the prediction task is applicable to the random
+ evaluation-dataset at hand over the entire space spanned by the
 covariates. Whereas the spatial cross validation creates the folds based on
 assigned geographic space. The sites are grouped by geographic location
 (ex. blocks of 6 degree by 6 degree) and then the folds are created based
 on where the site lies. Then crossvalidation is performed. This aims at
 understanding if the model is able to predict locations that are not known
 and so span a unknown covariate space though this is only done for
-geographic space in this case. They also perform a feature cross alidation
+geographic space in this case. They also perform a feature cross validation
 with all the covariates (I assume).
 
 **In spatial upscaling, we model the target based on environmental
@@ -60,8 +66,8 @@ applicability (AOA).
 
 Loading all the packages
 
-```{R}
-packages <- c("tidyverse","recipes","ggplot2","sf","rnaturalearth","rnaturalearthdata","caret","ranger","skimr") 
+```{R, message = FALSE}
+packages <- c("tidyverse","recipes","ggplot2","sf","rnaturalearth","rnaturalearthdata","caret","ranger","skimr","renv") 
 
 source("../R/load_packages.R")
 load_packages(packages)#loading
@@ -73,7 +79,7 @@ load_packages(packages)#loading
 
 No further specification
 
-```{R}
+```{R }
 df <- readr::read_csv("https://raw.githubusercontent.com/stineb/leafnp_data/main/data/leafnp_tian_et_al.csv")
 
 common_species <- df |> 
@@ -95,12 +101,11 @@ skimr::skim(dfs)
 
 ```
 
-## Define simple model with random cross-validation
-
-Directly from AGDS 1 forest definition, no hyperparameter tuning is
+## Random cross-validation
+The random forest implementation is directly taken from AGDS I, no hyperparameter tuning is
 performed, cv is random with 5 folds. Predictors as specified in exercise.
 
-```{R}
+```{R class.source = "fold-show"}
 pp <- recipes::recipe(leafN ~ elv + mat + map + ndep + mai + Species, 
                       data = dfs) |> 
   recipes::step_center(recipes::all_numeric(), -recipes::all_outcomes()) |>
@@ -131,7 +136,7 @@ print(paste0("RSQ : ", mean(mod_random_cv$resample$Rsquared)))
 
 # Spatial cross-validation
 
-First, we evaluate the distribution of the datasource.
+First, we evaluate the distribution of the data-source. We plot a map of the geographic distribution.
 
 ```{R}
 
@@ -162,7 +167,7 @@ geographical distribution of data points for spatial upscaling.**
 
 -\> Heavy clustering in Europe and SE-Asia. Almost no sites in America or
 Africa: heavy bias towards these regions, spatial upscaling in other
-regions may not be justified.
+regions may not be justified as these regions are largely unknown. We could maybe define an area of applicability for regions that are too different from the known training data. As the exercise does not specify this and later no actual spatial upscaling is performed, this step is not investigated further.
 
 ## Spatial clusters
 
@@ -172,7 +177,7 @@ unsupervised machine learning method), considering the longitude and
 latitude of data points and setting . Plot points on a global map, showing
 the five clusters with distinct colors.**
 
-```{R}
+```{R class.source = "fold-show"}
 
 lonlat <- dfs |>
   select(lon,lat)
@@ -201,7 +206,7 @@ ggplot() +
 ```
 
 We see spatially formed clusters. Interestingly western Europe with all of
-the Americas. Probably due to little data availability in these regions.
+the Americas. Probably due to little data availability in the Americas.
 
 **Task:: Plot the distribution of leaf N by cluster.**
 
@@ -231,10 +236,10 @@ combined_plots
 
 ```
 
-We observe similar distributions of the mean with cluster 2 being very
-dense around the mean leaf nitrogen. But the density for some clusters is
+We observe somewhat similar distributions of the mean with cluster 2 being very
+dense around the mean leaf nitrogen. But generally the density for some clusters is
 much more dense then for others. This might imply that some clusters are
-more similar in regards to leaf nitrogen than others.
+more similar in regards to leaf nitrogen than others. Also cluster 5 has quite a abnormally high mean value.
 
 **Task:: Split your data into five folds that correspond to the geographical
 clusters identified by in (2.), and fit a random forest model with the same
@@ -244,7 +249,7 @@ folds**
 
 ## Folds by cluster for spatial folds
 
-```{r}
+```{r class.source = "fold-show"}
 
 # create folds based on clusters
 # assuming 'df' contains the data and a column called 'cluster' containing the 
@@ -274,7 +279,7 @@ group_folds_test <- purrr::map(
 
 ## Corss-validation by hand for spatial folds
 
-```{r}
+```{r class.source = "fold-show"}
 # create a function that trains a random forest model on a given set of rows and 
 # predicts on a disjunct set of rows
 train_test_by_fold <- function(idx_train, idx_val){
@@ -327,6 +332,8 @@ print(paste0("RSQ: ",round(mean(out$rsq),2)))
 print(paste0("RMSE: ",round(mean(out$rmse),2)))
 
 ```
+The results of the spatial cross-validation will be discussed later.
+
 
 # Enviromental Cross Validation
 
@@ -337,7 +344,7 @@ annual temperature. Report the R-squared and the RMSE on the validation set
 of each of the five folds.**
 
 ## Define the enviromental clusters
-
+We define the environmental clusters as we did for the spatial, aditionally we scale them. Then the same analysis for the distribution is plotted.
 ```{r}
 
 env <- dfs |>
@@ -395,8 +402,8 @@ combined_plots
 ```
 
 We observe similar distributions for all clusters of leaf nitrogen for the
-environmental cross validation folds. But now, the density is more even for
-the clusters. This is probably because leaf nitrogen is now split more
+environmental cross validation folds. Now also the density is more even for
+the clusters as well as the mean. This is probably because leaf nitrogen is now split more
 evenly across the folds because they are environmentally not spatially
 clustered.
 
@@ -404,7 +411,7 @@ Furthermore we see the nice clusters in the second plot.
 
 ## Enviromental cross-validation by hand
 
-```{r}
+```{r class.source = "fold-show"}
 
 
 
@@ -459,16 +466,16 @@ print(paste0("RMSE: ",round(mean(out$rmse),2)))
 The best metrics of all model has the random cross validation model. This
 is to be expected since data from all sites are in all folds and thus no
 spatial or environmental validation is made. The model performance is
-though not representative for the spatial upscaling task. The RSQ and the
-RMSE is higher with the environmental cross validation. This probably means
-that the folds are more similar to each other and thus have a higher
+though not representative for the spatial upscaling task as the spatial upscaling is not performed only within the known covariate space. The RSQ is higher and the
+RMSE is lower in the environmental cross validation than in the spatial cross validation. This probably means
+that the folds are more similar to each other in the environmental cross validation and thus have a higher
 predictive power then when doing a spatial cross validation. This is also
 visible in the different folds. The folds in the spatial upscaling perform
 vastly different to each other while in the enviromental upscaling the
 folds are more similar. Additionally by far the lowest predictive power of
-any cluster has a fold in the spatial upscaling further backing this up.
+any cluster has a fold in the spatial upscaling further backing this up. Furthermore, this is also visible in the distributions of leaf nitrogen, as the environmental cross validations have a more similar distribution.
 
-All in all the preferred solution should be a spatial or enviromental
+All in all the preferred solution should be a spatial or environmental
 cross-validation since it is more sincere about the predictive power of the
 model in novel sites and therefore spatial upscaling. A good solution would
 be to check if the new enviromental covariates that are present in each
@@ -477,4 +484,4 @@ true, this then further validates the model. If not, new training data
 should be optained or the spatial upsacling should only be performed to the
 areas with known enviromental covariates. This is because models perform
 poorly when exposed to data outside of the training values. (Ludwig et
-al.2023) This is also done with the AOA in the paper.
+al.2023) This is also done with the area of applicability in the paper.
